--- a/eshop-frontend/apps/ng-shop/src/app/pages/home-page/home-page.component.html
+++ b/eshop-frontend/apps/ng-shop/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,5 @@
-<ui-banner></ui-banner>
-<products-categories-banner></products-categories-banner>
-<products-featured-product></products-featured-product>
+<div>
+  <ui-banner></ui-banner>
+  <products-categories-banner></products-categories-banner>
+  <products-featured-product></products-featured-product>
+</div>
