--- a/eshop-frontend/apps/ng-shop/src/app/shared/footer/footer.component.html
+++ b/eshop-frontend/apps/ng-shop/src/app/shared/footer/footer.component.html
@@ -1,4 +1,7 @@
-<footer>
+<div class="footer">
+  <div class="">&copy; 2022 E-Shop</div>
+</div>
+<!-- <footer>
   <div class="p-grid footer-wrapper">
     <div class="p-col-8">&copy; 2022 E-Shop</div>
     <div class="p-col-4 social">
@@ -15,4 +18,4 @@
       </ul>
     </div>
   </div>
-</footer>
+</footer> -->
