--- a/eshop-frontend/libs/product/src/lib/components/featured-product/featured-product.component.html
+++ b/eshop-frontend/libs/product/src/lib/components/featured-product/featured-product.component.html
@@ -5,4 +5,7 @@
       <products-product-item [product]="product"></products-product-item>
     </div>
   </div>
+  <div class="ng-shop-footer">
+    <div class="">&copy; 2022 E-Shop</div>
+  </div>
 </div>
