--- a/eshop-frontend/apps/admin/src/app/pages/orders/order-list/order-list.component.html
+++ b/eshop-frontend/apps/admin/src/app/pages/orders/order-list/order-list.component.html
@@ -16,32 +16,39 @@
         <p-table [value]="orders" styleClass="p-datatable-gridlines">
           <ng-template pTemplate="header">
             <tr>
-              <th>User <p-sortIcon></p-sortIcon>
-              </th>
+              <th>User <p-sortIcon></p-sortIcon></th>
               <th>Phone</th>
-              <th>Total Price <p-sortIcon></p-sortIcon>
-              </th>
-              <th>Date Ordered <p-sortIcon></p-sortIcon>
-              </th>
-              <th>Status <p-sortIcon></p-sortIcon>
-              </th>
+              <th>Total Price <p-sortIcon></p-sortIcon></th>
+              <th>Date Ordered <p-sortIcon></p-sortIcon></th>
+              <th>Status <p-sortIcon></p-sortIcon></th>
               <th></th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-order>
             <tr>
               <td>{{ order.user.name }}</td>
-              <td> {{ order.phone }}</td>
+              <td>{{ order.phone }}</td>
               <td>{{ order.totalprice }}</td>
-              <td>{{ order.dataOrdered | date: 'short' }}</td>
+              <td>{{ order.dateOrdered | date: 'short' }}</td>
               <td>
-                <p-tag [value]="order.status" [severity]="orderStatus[order?.status].color"></p-tag>
+                <p-tag
+                  [value]="orderStatus[order?.status].label"
+                  [severity]="orderStatus[order?.status].color"
+                ></p-tag>
               </td>
               <td>
-                <p-button styleClass="p-button-danger mr-2" icon="pi pi-trash" (click)="deleteOrder(order.id)">
+                <p-button
+                  styleClass="p-button-danger mr-2"
+                  icon="pi pi-trash"
+                  (click)="deleteOrder(order.id)"
+                >
                 </p-button>
 
-                <p-button styleClass="p-button-success" icon="pi pi-eye" (click)="showOrderDetails(order.id)">
+                <p-button
+                  styleClass="p-button-success"
+                  icon="pi pi-eye"
+                  (click)="showOrderDetails(order.id)"
+                >
                 </p-button>
               </td>
             </tr>
@@ -50,6 +57,10 @@
       </div>
     </div>
   </p-card>
-  <p-confirmDialog [style]="{ width: '50vw' }" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text">
+  <p-confirmDialog
+    [style]="{ width: '50vw' }"
+    [baseZIndex]="10000"
+    rejectButtonStyleClass="p-button-text"
+  >
   </p-confirmDialog>
 </div>
