--- a/eshop-frontend/apps/admin/src/styles.scss
+++ b/eshop-frontend/apps/admin/src/styles.scss
@@ -1,8 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-@import '../../../styles/admin.scss';  
-p-inputnumber{
-  width:100% 
-}
- .p-dropdown{
+@import '../../../styles/admin.scss';
+p-inputnumber {
   width: 100%;
- }
+}
+.p-dropdown {
+  width: 100%;
+}
