--- a/eshop-frontend/apps/ng-shop/src/app/app.component.html
+++ b/eshop-frontend/apps/ng-shop/src/app/app.component.html
@@ -1,5 +1,9 @@
-<div class="container">
+<div class="ng-shop-container">
   <eshop-frontend-header></eshop-frontend-header>
-  <router-outlet></router-outlet>
-  <eshop-frontend-footer></eshop-frontend-footer>
+  <div class="ps-3 pe-3 route-content">
+    <router-outlet></router-outlet>
+  </div>
+  <!-- <div class="footer">
+    <div class="">&copy; 2022 E-Shop</div>
+  </div> -->
 </div>
