--- a/eshop-frontend/apps/ng-shop/src/app/shared/header/header.component.html
+++ b/eshop-frontend/apps/ng-shop/src/app/shared/header/header.component.html
@@ -1,19 +1,17 @@
 <header>
-  <div class="grid">
-    <div class="col-3">
-      <div class="logo">
-        <img src="assets/logo.png" alt="logo" />
-      </div>
+  <div class="d-flex justify-content-between align-items-center">
+    <div class="logo">
+      <img src="assets/logo.png" alt="logo" />
     </div>
-    <div class="col-4 search">
+    <div class="search">
       <products-search></products-search>
     </div>
-    <div class="col-3 offset-1 navigation">
+    <div class="navigation">
       <eshop-frontend-nav></eshop-frontend-nav>
     </div>
-    <div class="col-1 tool">
-      <i class="pi pi-user p-text-secondary" style="font-size: 1.5rem"></i>
-      <orders-cart-icon></orders-cart-icon>
+    <div class="tool">
+      <i class="pi pi-user p-text-secondary me-3" style="font-size: 1.5rem; cursor: pointer"></i>
+      <orders-cart-icon style="cursor: pointer"></orders-cart-icon>
     </div>
   </div>
 </header>
