--- a/eshop-frontend/apps/ng-shop/src/styles.scss
+++ b/eshop-frontend/apps/ng-shop/src/styles.scss
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-
+body {
+  background-color: var(--surface-100);
+}
 @import '../../../styles/ngshop.scss';
+
+.ng-shop-footer {
+  width: 100%;
+  height: 40px;
+  border: 1px solid;
+  background-color: var(--yellow-100);
+}
