--- a/eshop-frontend/libs/orders/src/lib/components/cart-icon/cart-icon.component.html
+++ b/eshop-frontend/libs/orders/src/lib/components/cart-icon/cart-icon.component.html
@@ -1,9 +1,8 @@
-<!-- <i class="pi pi-shopping-cart"></i> -->
 <i
   class="pi pi-shopping-cart mr-4 p-text-secondary"
   pBadge
   style="font-size: 1.5rem"
   value="{{ cartCount }}"
   severity="danger"
+  routerLink="/cart"
 ></i>
-<!-- <p-badge value="{{ cartCount }}" severity="danger"></p-badge> -->
