--- a/eshop-frontend/libs/orders/src/lib/pages/cart-page/cart-page.component.html
+++ b/eshop-frontend/libs/orders/src/lib/pages/cart-page/cart-page.component.html
@@ -1,1 +1,64 @@
-<p>cart-page works!</p>
+<div class="cart-page">
+  <div class="grid cart">
+    <div class="col-8">
+      <div class="mb-4">
+        <p-button label="Continue Shopping" icon="pi pi-arrow-left" (onClick)="backToShop()">
+        </p-button>
+      </div>
+      <div class="mb-4">
+        <h4>My Cart: {{ cartCount }} Item(s)</h4>
+      </div>
+      <div class="cart-info mb-4">
+        Shipping after the payment, Delivery Time: 1 to 4 working days
+      </div>
+      <div class="cart-item mb-2" *ngFor="let item of cartItemDetailed">
+        <div class="d-flex">
+          <div class="col-2 cart-item-image">
+            <img [src]="item.product.image" [alt]="item.product.name" />
+          </div>
+          <div class="col-6">
+            <div class="cart-item-name">{{ item.product.name }}</div>
+            <div class="cart-item-price">
+              {{ item.product.price | currency }}
+            </div>
+            <div class="cart-item-remove">
+              <p-button icon="pi pi-trash" (onClick)="deleteCartItem(item.product.id)"> </p-button>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="cart-item-quantity">
+              <div class="field col-12 md:col-3 p-0">
+                <p-inputNumber
+                  mode="decimal"
+                  [showButtons]="true"
+                  [inputId]="item.product.id"
+                  [min]="1"
+                  [max]="100"
+                  [(ngModel)]="item.quantity"
+                  (onInput)="updateCartItemQty($event, item)"
+                >
+                </p-inputNumber>
+              </div>
+            </div>
+            <div class="cart-item-subtotal">
+              Subtotal:
+              <span class="cart-item-subtotal-value">
+                {{
+                  item.product.price !== undefined && item.quantity !== undefined
+                    ? (item.product.price * item.quantity | currency)
+                    : ''
+                }}
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <eshop-frontend-order-summary></eshop-frontend-order-summary>
+    </div>
+  </div>
+</div>
+<div class="ng-shop-footer">
+  <div class="">&copy; 2022 E-Shop</div>
+</div>
