--- a/eshop-frontend/libs/product/src/lib/pages/product-list/product-list.component.html
+++ b/eshop-frontend/libs/product/src/lib/pages/product-list/product-list.component.html
@@ -2,21 +2,31 @@
   <div class="grid">
     <div class="col-3" *ngIf="!isCategoryPage">
       <h4>Categories</h4>
-      <span *ngIf="categories ">
+      <span *ngIf="categories">
         <div class="field-checkbox" *ngFor="let cat of categories">
-          <p-checkbox [(ngModel)]="cat.checked" [binary]="true" inputId="{{cat.id}}"
-            (onChange)="categoryFilter(categories)">
+          <p-checkbox
+            [(ngModel)]="cat.checked"
+            [binary]="true"
+            inputId="{{ cat.id }}"
+            (onChange)="categoryFilter(categories)"
+          >
           </p-checkbox>
-          <label for="{{cat.id}}">{{cat.name}}</label>
+          <label for="{{ cat.id }}">{{ cat.name }}</label>
         </div>
       </span>
     </div>
-    <div [ngClass]="{'col-9' :!isCategoryPage ,'col-12': isCategoryPage}">
+    <div [ngClass]="{ 'col-9': !isCategoryPage, 'col-12': isCategoryPage }">
       <div class="grid" *ngIf="products">
-        <div [ngClass]="{'col-4' :!isCategoryPage ,'col-3': isCategoryPage}" *ngFor="let product of products">
+        <div
+          [ngClass]="{ 'col-4': !isCategoryPage, 'col-3': isCategoryPage }"
+          *ngFor="let product of products"
+        >
           <products-product-item [product]="product"></products-product-item>
         </div>
       </div>
     </div>
+  </div>
+  <div class="ng-shop-footer">
+    <div class="">&copy; 2022 E-Shop</div>
   </div>
 </div>
