--- a/eshop-frontend/styles/apps/shop/shared/footer.scss
+++ b/eshop-frontend/styles/apps/shop/shared/footer.scss
@@ -1,20 +1,23 @@
 footer {
-  background-color: var(--yellow-100);
-  min-height: 50px;
-  padding: 10px 25px;
   width: 100%;
-  margin-top: 25px;
+  height: 40px;
+  border: 1px solid;
+  // position: absolute;
+  // width: 100%;
+  // bottom: 0;
+  background-color: var(--yellow-100);
+  // min-height: 50px;
+  // padding: 10px 10px;
+  // left: 0;
+  // .footer-wrapper {
+  //   align-items: center;
+  //   .social {
+  //     margin-top: 15px;
+  //     text-align: right;
 
-  .footer-wrapper {
-    align-items: center;
-
-    .social {
-      margin-top: 15px;
-      text-align: right;
-
-      .nav {
-        justify-content: flex-end;
-      }
-    }
-  }
+  //     .nav {
+  //       justify-content: flex-end;
+  //     }
+  //   }
+  // }
 }
